Try to use serial gc