@@ -1,4 +1,4 @@
 FROM navikt/java:11
 COPY build/libs/*.jar app.jar
-ENV JAVA_OPTS='-Dlogback.configurationFile=logback-remote.xml -Xmx256M -XX:+UseConcMarkSweepGC'
+ENV JAVA_OPTS='-Dlogback.configurationFile=logback-remote.xml -Xmx256M -XX:+UseSerialGC'
 ENV APPLICATION_PROFILE="remote"
